- Fix: Root curricular period label displaying 'null' on child order

30.9.4 (31-08-2020)
- Fix: Coordinator curricular year statistics should use execution year on computation

30.9.3 (14-08-2020)
- Improvement: Child execution interval should be created with the default state (not open)
- Improvement: Mark lesson instance as online

30.9.2 (11-08-2020)
- Refactor: Allow CreditsLimit rule subclassing

30.9.1 (07-08-2020)
- Fix: Unique acronym check should ignore blank values
- Fix: Add official unit setter with primitive boolean param

30.9.0 (06-08-2020)
- Improvement: Add AccountabilityType as UnitGroup argument (and deprecate AccountabilityTypeEnum)
- Improvement: Add code to AccountabilityType
- Refactor: Teacher authorizations for units, instead of departments
- Refactor: Cleanup deprecated DepartmentForum
- Refactor: Cleanup deprecated department argument in TeacherGroup
- Refactor: Cleanup deprecated Department and Teacher methods
- Fix: Fixed PermissionService objects provide

30.8.0 (04-08-2020)
- Improvement: Simplified curricular rule executors creation
- Refactor: Deprecated old curricular rule execution modes
- Fix: Enrolment state not evaluated label should not be flunked  

30.7.0 (29-07-2020)
- Refactor: Moved relation PersonCountryHighSchool from specification to academic-core
- Improvement: Added second nacionality to PersonBean

30.6.2 (27-07-2020)
- Improvement: In student portal initial screen, show execution course alternative site
- Improvement: Simplified competence course acronym generation
- Fix: PreviousYearsEnrolmentExecutor should also collect root curriculum group rules on verification context 

30.6.1 (30-06-2020)
- Fix: Typo in Languages method

30.6.0 (30-06-2020)
- New feature: Specify shift languages
- Improvement: Updated permission service
- Improvement: New methods to check if shift and school class are free for a specific registration 
- Fix: Add coordinator responsible setter with primitive boolean param

30.5.1 (22-06-2020)