@@ -1,4 +1,5 @@
 - Fix: Root curricular period label displaying 'null' on child order
+- Refactor: Remove teacher authorization departments to units migration on system init
 
 30.9.4 (31-08-2020)
 - Fix: Coordinator curricular year statistics should use execution year on computation
